--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<div id="frame">
 		<ul class="clearfix" id="slider">
-			<li><img src="http://placehold.it/350x150"></li>
+			<li class="a"><img src="http://placehold.it/350x151"></li>
 			<li><img src="http://placehold.it/350x150"></li>
 			<li><img src="http://placehold.it/350x150"></li>
 		</ul>
