1st version fixed

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 	</div>
 		<p class="prev">前へ</p>
 		<p class="next">次へ</p>
+		<ul class="pager">
+			<li><a href="#">1枚目</a></li>
+			<li><a href="#">2枚目</a></li>
+			<li><a href="#">3枚目</a></li>
+		</ul>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
