--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
 			<li><img src="http://placehold.it/350x150"></li>
 		</ul>
 	</div>
-		<p class="prev">前へ</p>
-		<p class="next">次へ</p>
-		<ul class="pager">
-			<li><a href="#">1枚目</a></li>
-			<li><a href="#">2枚目</a></li>
-			<li><a href="#">3枚目</a></li>
-		</ul>
+	<p class="prev">前へ</p>
+	<p class="next">次へ</p>
+	<ul class="pager">
+		<li><a href="#">1枚目</a></li>
+		<li><a href="#">2枚目</a></li>
+		<li><a href="#">3枚目</a></li>
+	</ul>
+
+	<div class="fadeWrapper">
+		<img src="http://placehold.it/360x151" class="fadeList">
+		<img src="http://placehold.it/350x151" class="fadeList">
+		<img src="http://placehold.it/320x151" class="fadeList">
+	</div>
+
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script type="text/javascript" src="assets/js/main.js"></script>
+	<script type="text/javascript" src="assets/js/crossFade.js"></script>
 </body>
 </html>
